--- a/index.html
+++ b/index.html
@@ -29,10 +29,19 @@
         </nav>
         <main>
 
-            <div id="scenario">
+            <section id="scenario">
                 <h1>Scenario</h1>
-            </div>
-            <div id="criteria">
+                <p>Tina owns a restaurant called [Insert name].</p>
+                <p> The restaurant is open from Monday through Saturday from 8:00am to 8:00pm. The chefs and waiters
+                    work on shifts - a morning shift from 9:00am to 1:00pm and a night shift from 1:00pm to 8:00pm. If
+                    you wish to dine at the restaurant, you must call and make a reservation or you will have to wait
+                    until either someone misses their reservation or for a free time slot after you arrive. Once you are
+                    seated, a waiter or waitress will give you a menu to order from. You pay for what you ordered after
+                    your meal.</p>
+                <p>However, with the onset of the pandemic, regular operations have been disrupted.</p>
+                <p class="call-to-action">Tina must find a a way to keep her restaurant afloat, can you find a soltuion for her? </p>
+            </section>
+            <section id="criteria">
                 <h1>Judging Criteria</h1>
                 <p>All submissions will be judged based on the following:</p>
 
@@ -45,23 +54,23 @@
                 <p>You can get a maximum for 10 points for each criterion for a total of 40 points.</p>
                 <section>
                     <h2>Usability</h2>
-                    <p></p>
+                    <p>The solution should be easy to use and easy to learn how to use.</p>
                     <h2>Reliability</h2>
-                    <p></p>
+                    <p>The solution should perform consistently. Try to keep bugs or erros to a minimum.</p>
                     <h2>Creativity</h2>
-                    <p></p>
+                    <p>The solution should be innovative.</p>
                     <h2>Completeness</h2>
-                    <p></p>
+                    <p>The solution should solve all aspects of the problems in the scenario.</p>
                 </section>
-            </div>
-            <div id="bonus">
+            </section>
+            <section id="bonus">
                 <h1>Bonus</h1>
                 The following attract a bonus of 5 points each:
                 <ul>
                     <li>Using anything done in the Coder's Toolkit Workshops (Git, Linux, AWS, Docker)</li>
                     <li>Creating an object oriented solution</li>
                 </ul>
-            </div>
+            </section>
         </main>
     </section>
 </body>
