screen size responsiveness added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </section>
             <section id="bonus">
                 <h1>Bonus</h1>
-                The following attract a bonus of 5 points each:
+                <p>The following attract a bonus of 5 points each:</p>
                 <ul>
                     <li>Using anything done in the Coder's Toolkit Workshops (Git, Linux, AWS, Docker)</li>
                     <li>Creating an object oriented solution</li>
