added constraints section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <nav>
             <ul>
                 <li><a href="#scenario">SCENARIO</a></li>
+                <li><a href="#constraints">CONSTRAINTS</a></li>
                 <li><a href="#criteria">JUDGING CRITERIA</a></li>
                 <li><a href="#bonus">BONUS</a></li>
             </ul>
@@ -39,7 +40,14 @@
                     seated, a waiter or waitress will give you a menu to order from. You pay for what you ordered after
                     your meal.</p>
                 <p>However, with the onset of the pandemic, regular operations have been disrupted.</p>
-                <p class="call-to-action">Tina must find a a way to keep her restaurant afloat, can you find a soltuion for her? </p>
+                <p class="call-to-action">Tina must find a a way to keep her restaurant afloat, can you find a solution for her? </p>
+            </section>
+            <section id="constraints">
+                <h1>Constraints</h1>
+                <ul>
+                    <li>You have 3 hours to formulate and complete your solution</li>
+                    <li>You must work in teams of 2-6 persons.</li>
+                </ul>
             </section>
             <section id="criteria">
                 <h1>Judging Criteria</h1>
@@ -51,7 +59,7 @@
                     <li>Creativity</li>
                     <li>Completeness</li>
                 </ul>
-                <p>You can get a maximum for 10 points for each criterion for a total of 40 points.</p>
+                <p>You can get a maximum of 10 points for each criterion for a total of 40 points.</p>
                 <section>
                     <h2>Usability</h2>
                     <p>The solution should be easy to use and easy to learn how to use.</p>
