added submissions section

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
         <nav>
             <ul>
                 <li><a href="#scenario">SCENARIO</a></li>
+                <li>|</li>
                 <li><a href="#constraints">CONSTRAINTS</a></li>
+                <li>|</li>
                 <li><a href="#criteria">JUDGING CRITERIA</a></li>
+                <li>|</li>
                 <li><a href="#bonus">BONUS</a></li>
+                <li>|</li>
+                <li><a href="submission">SUBMISSION</a></li>
             </ul>
         </nav>
         <main>
@@ -78,6 +83,9 @@
                     <li>Using anything done in the Coder's Toolkit Workshops (Git, Linux, AWS, Docker)</li>
                     <li>Creating an object oriented solution</li>
                 </ul>
+            </section>
+            <section id="submission">
+                <h1>Submission</h1>
             </section>
         </main>
     </section>
