added favicon, adjusted font sizes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coder's Toolkit Hackathon</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/index.css">
     <script src="scripts/index.js" defer></script>
 </head>
@@ -45,7 +47,8 @@
                     seated, a waiter or waitress will give you a menu to order from. You pay for what you ordered after
                     your meal.</p>
                 <p>However, with the onset of the pandemic, regular operations have been disrupted.</p>
-                <p class="call-to-action">Tina must find a a way to keep her restaurant afloat, can you find a solution for her? </p>
+                <p class="call-to-action">Tina must find a a way to keep her restaurant afloat, can you find a solution
+                    for her? </p>
             </section>
             <section id="constraints">
                 <h1>Constraints</h1>
