remove unused assets

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coder's Toolkit Hackathon</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/index.css">
     <script src="scripts/index.js" defer></script>
 </head>
@@ -41,7 +40,7 @@
                 <p>
                     Sasha owns a restaurant known as Kruger Cuisine, which is famous for its high-quality steak meals
                     and
-                    excellent customer service, however, due to the onset of the pandemic, regular operations have been
+                    excellent customer service. However, due to the onset of the pandemic, regular operations have been
                     severely
                     disrupted, primarily due to most of the business operations being offline.
                 </p>
@@ -116,6 +115,8 @@
                 <p class="emphasis">
                     You can get a maximum of 10 points for each criterion for a total of 40 points.
                 </p>
+                <p class="emphasis">Your team will present your idea at the end of the session and your peers will vote out of 5 for each criterion based on your presentation</p>
+                <p class="emphasis">The judges will review code submissions for bonus points and to score out of the remaining 5 points for each criterion based on your code.</p>                
             </section>
             <section id="bonus">
                 <h1>Bonus</h1>
@@ -127,6 +128,7 @@
                     </li>
                     <li>Creating an object oriented solution</li>
                 </ul>
+                <p><i>Note: with the addition of bonus points, if applicable, your team can score over 40 points</i></p>
             </section>
             <section id="submission">
                 <h1>Submission</h1>
